--- a/build.yaml
+++ b/build.yaml
@@ -2,14 +2,14 @@ name: "OPDS"
 guid: "F30880AE-3365-449E-B9E6-BF133C8401B0"
 imageUrl: "https://repo.jellyfin.org/releases/plugin/images/jellyfin-plugin-opds.png"
 version: 6
-targetAbi: "10.10.0.0"
-framework: "net8.0"
+targetAbi: "10.11.0.0"
+framework: "net9.0"
 owner: "jellyfin"
 overview: "Provides an OPDS book feed"
 description: >
   Provides an OPDS feed for book browsing.
 
-category: "General"
+category: "Books"
 artifacts:
   - "Jellyfin.Plugin.Opds.dll"
 changelog: |-
